trunk/Archive2/ef/9424aa7aeef132/output
main.cpp: In function 'int main()':
main.cpp:21:9: error: expected ')' before 'std'
         std::cout << d << " ";
         ^
bash: line 8: ./a.out: No such file or directory
